--- a/swipeactions/build.gradle
+++ b/swipeactions/build.gradle
@@ -1,6 +1,47 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+ext {
+    bintrayRepo = 'Android'
+    bintrayName = 'SwipeActionsView'
+
+    publishedGroupId = 'com.hold1'
+    pomLibraryName = bintrayName
+
+    libraryDescription = 'Gradient animation library, that provides Animated drawable resources and views for enhancing user interfaces.'
+
+    siteUrl = 'https://github.com/Crysis21/SwipeActionsView'
+    gitUrl = 'https://github.com/Crysis21/SwipeActionsView.git'
+
+    libraryVersion = android.defaultConfig.versionName
+
+    developerId = 'crysis21'
+    developerName = 'Cristian Holdunu'
+    developerEmail = 'cristian.holdunu@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+
+group = publishedGroupId
+project.archivesBaseName = 'swipeactionsview'
+version = '0.0.1'
+
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+    }
+}
+
+apply plugin: 'com.jfrog.bintray'
+
+
 android {
     compileSdkVersion 28
 
@@ -36,6 +77,77 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
 }
+
+install {
+    repositories.mavenInstaller {
+        // This generates POM.xml with proper parameters
+        pom {
+            project {
+                packaging 'aar'
+                groupId publishedGroupId
+
+                name pomLibraryName
+                description libraryDescription
+                url siteUrl
+
+                licenses {
+                    license {
+                        name licenseName
+                        url licenseUrl
+                    }
+                }
+                developers {
+                    developer {
+                        id developerId
+                        name developerName
+                        email developerEmail
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+
+                }
+            }
+        }
+    }
+}
+
+
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+artifacts {
+    archives sourcesJar
+}
+
+
+bintray {
+    user = BINTRAY_USER
+    key = BINTRAY_KEY
+    configurations = ['archives']
+
+    pkg {
+        repo = bintrayRepo
+        name = bintrayName
+        userOrg = developerId
+        desc = libraryDescription
+        licenses = allLicenses
+        websiteUrl = siteUrl
+        vcsUrl = gitUrl
+        publish = true
+        publicDownloadNumbers = true
+        version {
+            desc = libraryDescription
+            vcsTag = version
+            released = new Date()
+        }
+    }
+}
+
 repositories {
     mavenCentral()
 }
